--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Procopio's Açaí</title>
-    <script src="js/index.js"></script>
+    <script src="js/slide.js"></script>
+    <script src="js/menu.js"></script>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/navbar.css">
 </head>
 <body>
+    <img class="romano" src="imagens/romano.png" alt="estrutura romana">
     <div class="back">
         <header>
             <div class="navBar">
@@ -20,10 +22,12 @@
                         <li><a href="/">Quem Somos?</a></li>
                     </ul>
                 </nav>
-                <div class='menu'>
-                    <div id="men1"></div>
-                    <div id="men2"></div>
-                    <div id="men3"></div>
+                <div id="menu" onclick="menu()">
+                    <div class='menu'>
+                        <div id="men1"></div>
+                        <div id="men2"></div>
+                        <div id="men3"></div>
+                    </div>
                 </div>
                 <div class="logo">
                     <h3>Procópios Açaí</h3>
