--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="somos" id="somos">
-                <p>Sobre nós</p>
+                <h4>Sobre nós</h4>
                 <h1>&#10157</h1>
                 <img id="familia" onclick="sobre()" src="imagens/logo.png" alt="familia">
                 <div id="nós">
