--- a/index.html
+++ b/index.html
@@ -17,12 +17,20 @@
             <div class="navBar">
                 <nav>
                     <img class="exit" id="exit" src="imagens/esc.png" onclick="exit()" alt="exit menu">
-                    <ul class="lista">
-                        <li><a href="/">Início</a></li>
-                        <li><a href="/">Fazer Pedido</a></li>
-                        <li><a href="/">Feedback</a></li>
-                        <li><a href="/">Quem Somos?</a></li>
-                    </ul>
+                    <div class="lista">
+                        <div id="inicio">
+                            <a href="/">Início</a>
+                        </div>
+                        <div id="pedido">
+                            <a href="/">Fazer Pedido</a>
+                        </div>
+                        <div id="feedback">
+                            <a href="/">Feedback</a>
+                        </div>
+                        <div id="quem">
+                            <a href="/">Quem Somos?</a>
+                        </div>
+                    </div>
                 </nav>
                 <div id="menu" onclick="menu()">
                     <div class='menu'>
@@ -60,8 +68,8 @@
                 </div>
             </div>
             <div class="somos" id="somos">
-                <h2>Sobre nós</h2>
-                <h1>&#10157</h1>
+                <h4>Sobre nós</h4>
+                <h2>&#10157</h2>
                 <img id="familia" onclick="sobre()" src="imagens/logo.png" alt="familia">
                 <div id="nós">
                     <p>"A Procópio's Açaí nasceu da vontade de empreender em unidade e em família."</p>
