--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="js/sobre.js"></script>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/inicio.css">
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <img class="romano" src="imagens/romano.png" alt="estrutura romana">
@@ -22,13 +24,13 @@
                             <a href="/">Início</a>
                         </div>
                         <div id="pedido">
-                            <a href="/">Fazer Pedido</a>
+                            <a href="paginas/pedidos.html">Fazer Pedido</a>
                         </div>
                         <div id="feedback">
-                            <a href="/">Feedback</a>
+                            <a href="paginas/feedback.html">Feedback</a>
                         </div>
                         <div id="quem">
-                            <a href="/">Quem Somos?</a>
+                            <a href="paginas/somos.html">Quem Somos?</a>
                         </div>
                     </div>
                 </nav>
@@ -80,9 +82,7 @@
         </footer>
     </div>
     <footer class='navBot'>
-        <nav>
             <p id='copy'>© Copyright 2023 Procópio's Açaí - All Rights Reserved</p>
-        </nav>
       </footer>
 </body>
 </html>
