--- a/paginas/feedback.html
+++ b/paginas/feedback.html
@@ -24,7 +24,7 @@
                             <a href="../index.html">Início</a>
                         </div>
                         <div id="pedido">
-                            <a href="">Fazer Pedido</a>
+                            <a href="pedidos.html">Fazer Pedido</a>
                         </div>
                         <div id="feedback">
                             <a href="">Feedback</a>
