--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -24,13 +24,13 @@
                             <a href="../index.html">Início</a>
                         </div>
                         <div id="pedido">
-                            <a href="/">Fazer Pedido</a>
+                            <a href="">Fazer Pedido</a>
                         </div>
                         <div id="feedback">
-                            <a href="/">Feedback</a>
+                            <a href="feedback.html">Feedback</a>
                         </div>
                         <div id="quem">
-                            <a href="/">Quem Somos?</a>
+                            <a href="somos.html">Quem Somos?</a>
                         </div>
                     </div>
                 </nav>
