--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
         </header>
         <main>
             <div class="slider">
-                <div class="btn_menu">
-                    <label class="btn" for="slide1"></label>
-                    <label class="btn" for="slide2"></label>
-                    <label class="btn" for="slide3"></label>
-                    <label class="btn" for="slide4"></label>
-                </div>
                 <div class="entradas" onclick="toggleMenu()">
                     <input type="radio" name="btn_slide" id="slide1">
                     <input type="radio" name="btn_slide" id="slide2">
                     <input type="radio" name="btn_slide" id="slide3">
                     <input type="radio" name="btn_slide" id="slide4">
+                    <div class="btn_menu">
+                        <label class="btn" id="btn1" for="slide1"></label>
+                        <label class="btn" id="btn2" for="slide2"></label>
+                        <label class="btn" id="btn3" for="slide3"></label>
+                        <label class="btn" id="btn4" for="slide4"></label>
+                    </div>
                     <div class="imagem">
                         <img src="imagens/slide1.jpg" alt="slide1">
                         <img src="imagens/slide2.jpg" alt="slide2">
