--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -44,7 +44,7 @@
 
                 <div class="logo">
                     <h3>Procópios Açaí</h3>
-                    <img src="imagens/logo.png" alt="logo Procópio's Açaí">
+                    <img src="../imagens/logo.png" alt="logo Procópio's Açaí">
                 </div>
             </div>
         </header>
