--- a/paginas/feedback.html
+++ b/paginas/feedback.html
@@ -17,7 +17,7 @@
     <div class="back">
         <header>
             <div class="navBar">
-                <nav>
+                <nav id="deitado">
                     <img class="exit" id="exit" src="../imagens/esc.png" onclick="exit()" alt="exit menu">
                     <div class="lista">
                         <div id="inicio">
