--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <div class="back">
         <header>
             <div class="navBar">
-                <nav>
+                <nav id="deitado">
                     <img class="exit" id="exit" src="imagens/esc.png" onclick="exit()" alt="exit menu">
                     <div class="lista">
                         <div id="inicio">
-                            <a href="/">Início</a>
+                            <a href="">Início</a>
                         </div>
                         <div id="pedido">
                             <a href="paginas/pedidos.html">Fazer Pedido</a>
