--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
                 </div>
             </div>
             <div class="somos" id="somos">
-                <h4>Sobre nós</h4>
-                <h2>&#10157</h2>
+                <div class="sob">
+                    <h4>Sobre nós</h4>
+                    <h2>&#10157</h2>
+                </div>
                 <img id="familia" onclick="sobre()" src="imagens/logo.png" alt="familia">
                 <div id="nós">
                     <p>"A Procópio's Açaí nasceu da vontade de empreender em unidade e em família."</p>
@@ -82,7 +84,7 @@
         </footer>
     </div>
     <footer class='navBot'>
-            <p id='copy'>© Copyright 2023 Procópio's Açaí - All Rights Reserved</p>
-      </footer>
+         <p id='copy'>© Copyright 2023 Procópio's Açaí - All Rights Reserved</p>
+    </footer>
 </body>
 </html>
