--- a/paginas/feedback.html
+++ b/paginas/feedback.html
@@ -54,8 +54,8 @@
         <footer>
         </footer>
     </div>
-    <footer class='navBot'>
-            <p id='copy'>© Copyright 2023 Procópio's Açaí - All Rights Reserved</p>
-      </footer>
+    <footer>
+        
+    </footer>
 </body>
 </html>
