--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -56,8 +56,8 @@
             </div>
             <form class="pedido" action="">
                 <div class="formulario">
-                    <label onclick="select4()" for="_400"><input class="ml" type="radio" name="tamanho" id="_400"> 400 ml</label>
-                    <label onclick="select3()" for="_300"><input class="ml" type="radio" name="tamanho" id="_300"> 300 ml</label>
+                    <label onclick="select4()" id="btn_4" for="_400"><input class="ml" type="radio" name="tamanho" id="_400"> 400 ml</label>
+                    <label onclick="select3()" id="btn_3" for="_300"><input class="ml" type="radio" name="tamanho" id="_300"> 300 ml</label>
                 </div>
                 <div class="ingredientes">
                     <label for="leite"><input type="checkbox" name="leite" id="leite"> Leite em Pó</label>
