--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -51,8 +51,8 @@
         </header>
         <main class="cardapio">
             <div>
-                <label for="_400"><img id="_400ml" src="../imagens/slide1.jpg" alt="400ml"></label>
-                <label for="_300"><img id="_300ml" src="../imagens/slide2.jpg" alt="300ml"></label>
+                <label for="_400"><img id="_400ml" src="../imagens/IMG_0196.jpg" alt="400ml"></label>
+                <label for="_300"><img id="_300ml" src="../imagens/IMG_0206.jpg" alt="300ml"></label>
             </div>
             <form class="pedido" action="">
                 <div class="formulario">
@@ -66,10 +66,18 @@
                     <label for="jujuba"><input type="checkbox" name="jujuba" id="jujuba"> Jujuba</label>
                     <label for="confete"><input type="checkbox" name="confete" id="confete"> Confete</label>
                 </div>
-                <button class="fechar" type="submit"> concluir</button>
+                <button id="btn_sub" type="submit"></button>
             </form>
         </main>
-        <footer>
+        <footer class="nav_pag">
+            <div id="nav_pag">
+                <div>
+                    <h2>Total R$: 7,00</h2>
+                </div>
+                <div id="sub">
+                    <label id="sub" for="btn_sub">Concluir</label>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
