--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -74,7 +74,7 @@
                     <label for="jujuba"><input type="checkbox" name="jujuba" id="jujuba"> Jujuba</label>
                     <label for="confete"><input type="checkbox" name="confete" id="confete"> Confete</label>
                 </div>
-                <button id="btn_sub" type="submit" onclick="con()"></button>
+                <button id="btn_sub" type="submit"></button>
             </form>
         </main>
         <footer class="nav_pag">
@@ -82,7 +82,7 @@
                 <div>
                     <h2>Total R$: 7,00</h2>
                 </div>
-                <div id="sub">
+                <div onclick="con()" id="sub">
                     <label id="sub" for="btn_sub">Concluir</label>
                 </div>
             </div>
