--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <main>
             <div class="slider">
                 <div class="entradas" onclick="toggleMenu()">
-                    <input type="radio" name="btn_slide" id="slide1">
+                    <input type="radio" name="btn_slide" id="slide1" class="ativo1">
                     <input type="radio" name="btn_slide" id="slide2">
                     <input type="radio" name="btn_slide" id="slide3">
                     <input type="radio" name="btn_slide" id="slide4">
