--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -54,20 +54,48 @@
                 <label for="_400"><img id="_400ml" src="../imagens/IMG_0196.jpg" alt="400ml"></label>
                 <label for="_300"><img id="_300ml" src="../imagens/IMG_0206.jpg" alt="300ml"></label>
             </div>
-            <form class="pedido" action="">
-                <div class="formulario">
-                    <label onclick="select4()" id="btn_4" for="_400"><input class="ml" type="radio" name="tamanho" id="_400"> 400 ml</label>
-                    <label onclick="select3()" id="btn_3" for="_300"><input class="ml" type="radio" name="tamanho" id="_300"> 300 ml</label>
-                </div>
+            <div class="pedido" action="">
+                <form class="formulario">
+                    <label onclick="select4()" id="btn_4" for="_400"><input class="ml" type="radio" name="tamanho" id="_400" required> 400 ml</label>
+                    <label onclick="select3()" id="btn_3" for="_300"><input class="ml" type="radio" name="tamanho" id="_300" required> 300 ml</label>
+                    <button onclick="con()" id="btn_sub" type="submit"></button>
+                </form>
                 <div class="ingredientes">
-                    <label for="leite"><input type="checkbox" name="leite" id="leite"> Leite em Pó</label>
-                    <label for="paçoca"><input type="checkbox" name="paçoca" id="paçoca"> Paçoca</label>
-                    <label for="granola"><input type="checkbox" name="granola" id="granola"> Granola</label>
-                    <label for="jujuba"><input type="checkbox" name="jujuba" id="jujuba"> Jujuba</label>
-                    <label for="confete"><input type="checkbox" name="confete" id="confete"> Confete</label>
+                    <div onclick="one()" class="one">
+                        <label for="leite">
+                            <img src="../imagens/leite.jpg" id="leite_jpg" alt="">
+                            <input type="checkbox" name="leite" id="leite"> Leite em Pó
+                        </label>
+                        <label for="paçoca">
+                            <img src="../imagens/leite.jpg" id="paçoca_jpg" alt="">
+                            <input type="checkbox" name="paçoca" id="paçoca">Paçoca
+                        </label>
+                    </div>
+                    <section></section>
+                    <div onclick="two()" class="two">
+                        <label for="granola">
+                            <img src="../imagens/leite.jpg" id="granola_jpg" alt="">
+                            <input type="checkbox" name="granola" id="granola"> Granola
+                        </label>
+                        <label for="jujuba">
+                            <img src="../imagens/leite.jpg" id="jujuba_jpg" alt="">
+                            <input type="checkbox" name="jujuba" id="jujuba"> Jujuba
+                        </label>
+                    </div>
+                    <section></section>
+                    <div onclick="tree()" class="tree">
+                        <label for="confete">
+                            <img src="../imagens/leite.jpg" id="confete_jpg" alt="">
+                            <input type="checkbox" name="confete" id="confete"> Confete
+                        </label>
+                        <label for="bolinha">
+                            <img src="../imagens/leite.jpg" id="bolinha_jpg" alt="">
+                            <input type="checkbox" name="bolinha" id="bolinha">Bolinha
+                        </label>
+                    </div>
+                    <section></section>
                 </div>
-                <button id="btn_sub" type="submit"></button>
-            </form>
+            </div>
         </main>
         <footer class="nav_pag">
             <div id="nav_pag">
