--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -102,7 +102,7 @@
                 <div>
                     <h2>Total R$: 7,00</h2>
                 </div>
-                <div onclick="con()" id="sub">
+                <div id="sub">
                     <label id="sub" for="btn_sub">Concluir</label>
                 </div>
             </div>
