--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -93,7 +93,6 @@
                             <input type="checkbox" name="bolinha" id="bolinha">Bolinha
                         </label>
                     </div>
-                    <section></section>
                 </div>
             </div>
         </main>
@@ -103,7 +102,7 @@
                     <h2>Total R$: 7,00</h2>
                 </div>
                 <div id="sub">
-                    <label id="sub" for="btn_sub">Concluir</label>
+                    <label for="btn_sub">Concluir</label>
                 </div>
             </div>
         </footer>
